# structured-latent-hypothesis

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
docs/: research_note.md
reports/: 2026-04-17_initial_findings.md  2026-04-18_audited_cross_family_summary.md  2026-04-18_cfp_sweep_v1_findings.md  2026-04-18_commutator_ladder_ramp_v2_findings.md  2026-04-18_commutator_ladder_rotation_nested_v1_findings.md  2026-04-18_commutator_ladder_rotation_v1_findings.md  2026-04-18_commutator_ladder_scale_nested_v1_findings.md  2026-04-18_commutator_ladder_scale_v1_findings.md  2026-04-18_commutator_ladder_scale_v2_findings.md  2026-04-18_commutator_ladder_v1_findings.md  2026-04-18_confirmed_hypothesis.md  2026-04-18_curvature_defect_probe_v1_findings.md  2026-04-18_direct_separable_probe_v1_findings.md  2026-04-18_direct_separable_probe_v2_findings.md  2026-04-18_interaction_ladder_probe_v2_findings.md  2026-04-18_interaction_score_validation_v1_findings.md  2026-04-18_lowrank_tail_probe_v1_findings.md  2026-04-18_matched_family_audit.md  2026-04-18_multi_vector_reframe.md  2026-04-18_nested_selection_summary.md  2026-04-18_optimizer_geometry_branch_plan.md  2026-04-18_regime_gated_routing_v1_findings.md  2026-04-18_regime_gated_routing_v2_findings.md  2026-04-18_semireal_transfer_probe_v1_findings.md  2026-04-18_separable_transport_hypothesis.md  2026-04-18_shared_latent_score_stability_v1_findings.md  2026-04-18_shared_latent_score_validation_v1_findings.md  2026-04-18_step_stationarity_probe_findings.md  2026-04-18_structured_coord_adapter_probe_v1_findings.md  (+32 more)
(+193 files in other folders)
