[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-latent-hypothesis"
version = "0.1.0"
description = "Synthetic benchmarks and regularizers for the Commutative Flatness Prior."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.5",
]

[tool.setuptools.packages.find]
where = ["src"]
